--- a/Dashboard/src/DatabaseView.fxml
+++ b/Dashboard/src/DatabaseView.fxml
@@ -30,11 +30,11 @@
 
       </Label>
 
-      <Label layoutX="38.0" layoutY="156.0" text="Host:" />
+      <Label layoutX="38.0" layoutY="156.0" text="Datenbank-URL:" />
 
       <Label layoutX="40.0" layoutY="194.0" text="User:" />
 
-      <Label layoutX="363.0" layoutY="156.0" text="Port:" />
+      <Label layoutX="363.0" layoutY="156.0" text="JDBC-Treiber:" />
 
       <Label layoutX="333.0" layoutY="194.0" text="Passwort:" />
 
