--- a/Dashboard/src/Main.fxml
+++ b/Dashboard/src/Main.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -193,11 +193,7 @@
                   <Insets />
                </VBox.margin>
             </HBox>
-            <TextArea prefHeight="281.0" prefWidth="291.0" promptText="Log:" stylesheets="@StyleSheet.css">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </TextArea>
+            <ListView fx:id="myLog" prefHeight="200.0" prefWidth="200.0" />
          </children></VBox>
       <VBox layoutX="290.0" prefHeight="700.0" prefWidth="703.0">
          <children>
