--- a/Dashboard/src/AddReport.fxml
+++ b/Dashboard/src/AddReport.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
@@ -12,11 +17,22 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="AddReport" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="700.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AddReportController">
+<AnchorPane fx:id="AddReport" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="700.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AddReportController">
    <children>
-      <Button layoutX="463.0" layoutY="580.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="98.0" text="Hinzufügen" />
-      <Button layoutX="574.0" layoutY="580.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="97.0" text="Speichern" />
+      <TextField fx:id="Diagrammname" layoutX="37.0" layoutY="66.0" prefHeight="31.0" prefWidth="276.0" promptText="Diagrammname" />
+      <ComboBox fx:id="Aktualisierungsrate" layoutX="574.0" layoutY="68.0" prefHeight="25.0" prefWidth="97.0" />
+      <TextArea fx:id="SQLStatement" layoutX="37.0" layoutY="109.0" prefHeight="126.0" prefWidth="527.0" promptText="SELECT * FROM &lt;tabelle&gt; &#10;WHERE ...&#10;" />
+      <Button layoutX="574.0" layoutY="210.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="97.0" text="Test" />
+      <ComboBox fx:id="Diagrammtyp" layoutX="163.0" layoutY="249.0" prefHeight="25.0" prefWidth="150.0" />
+      <ListView fx:id="X_Achse" layoutX="36.0" layoutY="312.0" prefHeight="132.0" prefWidth="117.0" />
+      <TextField fx:id="NameX" layoutX="164.0" layoutY="312.0" prefHeight="25.0" prefWidth="150.0" promptText="Name der X-Achse" />
+      <TextField fx:id="MaßeinheitX" layoutX="165.0" layoutY="352.0" prefHeight="31.0" prefWidth="150.0" promptText="Maßeinheit" />
+      <ListView fx:id="Y_Achse" layoutX="37.0" layoutY="480.0" prefHeight="132.0" prefWidth="117.0" />
+      <TextField fx:id="NameY" layoutX="164.0" layoutY="480.0" prefHeight="25.0" prefWidth="150.0" promptText="Name der Y-Achse" />
+      <TextField fx:id="MaßeinheitY" layoutX="164.0" layoutY="518.0" prefHeight="25.0" prefWidth="151.0" promptText="Maßeinheit" />
       <Button layoutX="225.0" layoutY="580.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="89.0" text="Vorschau" />
+      <Button layoutX="463.0" layoutY="580.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="98.0" text="Abbrechen" />
+      <Button layoutX="574.0" layoutY="580.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="97.0" text="Hinzufügen" />
       <BarChart layoutX="313.0" layoutY="300.0" prefHeight="287.0" prefWidth="370.0">
          <xAxis>
             <CategoryAxis side="BOTTOM" />
@@ -25,25 +41,14 @@
             <NumberAxis side="LEFT" />
          </yAxis>
       </BarChart>
-      <ComboBox layoutX="163.0" layoutY="249.0" prefHeight="25.0" prefWidth="150.0" />
       <Label layoutX="38.0" layoutY="454.0" text="Y-Achse" />
       <Label layoutX="38.0" layoutY="283.0" text="X-Achse" />
-      <TextField layoutX="165.0" layoutY="352.0" prefHeight="31.0" prefWidth="150.0" promptText="Maßeinheit" />
-      <TextField layoutX="164.0" layoutY="518.0" prefHeight="25.0" prefWidth="151.0" promptText="Maßeinheit" />
-      <TextField layoutX="164.0" layoutY="480.0" prefHeight="25.0" prefWidth="150.0" promptText="Name der Y-Achse" />
-      <TextField layoutX="164.0" layoutY="312.0" prefHeight="25.0" prefWidth="150.0" promptText="Name der X-Achse" />
       <Label layoutX="38.0" layoutY="251.0" text="Diagrammtyp :" />
-      <TextField layoutX="37.0" layoutY="66.0" prefHeight="31.0" prefWidth="276.0" promptText="Diagrammname" />
-      <TextArea layoutX="37.0" layoutY="109.0" prefHeight="126.0" prefWidth="527.0" promptText="SELECT * FROM &lt;tabelle&gt;&#10;WHERE ...&#10;" />
-      <Button layoutX="574.0" layoutY="204.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="97.0" text="Test" />
-      <ComboBox layoutX="574.0" layoutY="68.0" prefHeight="25.0" prefWidth="97.0" />
-      <Label layoutX="449.0" layoutY="70.0" prefHeight="21.0" prefWidth="117.0" text="Update-Intervall:" />
-      <Label layoutX="26.0" layoutY="24.0" prefHeight="27.0" prefWidth="169.0" text="Reports anlegen">
+      <Label layoutX="454.0" layoutY="70.0" prefHeight="21.0" prefWidth="117.0" text="Aktualisierungsrate:" />
+      <Label layoutX="26.0" layoutY="24.0" prefHeight="27.0" prefWidth="219.0" text="Anzeige-Element anlegen">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <ListView layoutX="36.0" layoutY="312.0" prefHeight="132.0" prefWidth="117.0" />
-      <ListView layoutX="37.0" layoutY="480.0" prefHeight="132.0" prefWidth="117.0" />
    </children>
 </AnchorPane>
