--- a/Dashboard/src/Main.fxml
+++ b/Dashboard/src/Main.fxml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.effect.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -22,9 +13,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="MainView" prefHeight="700.0" prefWidth="690.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
+<AnchorPane id="AnchorPane" fx:id="MainView" prefHeight="700.0" prefWidth="690.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
    <children>
-      <VBox fx:id="VBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="284.0" style="-fx-background-color: lightgrey;">
+      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="284.0" style="-fx-background-color: lightgrey;">
          <children>
             <Pane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="116.0" prefWidth="284.0">
                <children>
@@ -83,11 +74,7 @@
                   <Insets />
                </VBox.margin>
             </HBox>
-            <TextArea fx:id="Log" prefHeight="281.0" prefWidth="291.0" promptText="Log:">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </TextArea>
+            <ListView fx:id="Log" prefHeight="200.0" prefWidth="200.0" />
          </children></VBox>
       <VBox layoutX="284.0" prefHeight="700.0" prefWidth="709.0">
          <children>
