--- a/Dashboard/src/Report.fxml
+++ b/Dashboard/src/Report.fxml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ChangeReport" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="700.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ChangeReportController">
+<AnchorPane fx:id="Report" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="700.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ReportController">
 
    <children>
 
@@ -75,7 +70,7 @@
 
                      <graphic>
 
-                        <ImageView fitHeight="50.0" fitWidth="20.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="50.0" fitWidth="20.0" onMouseClicked="#addViewElement" opacity="0.5" pickOnBounds="true" preserveRatio="true">
 
                            <image>
 
@@ -116,7 +111,7 @@
 
                   </Button>
 
-                  <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="130.0" text="Speichern">
+                  <Button mnemonicParsing="false" onMouseClicked="#addReport" prefHeight="32.0" prefWidth="130.0" text="Speichern">
 
                      <HBox.margin>
 
