--- a/Dashboard/src/Main.fxml
+++ b/Dashboard/src/Main.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="MainView" prefHeight="700.0" prefWidth="690.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
+<AnchorPane id="AnchorPane" fx:id="MainView" prefHeight="700.0" prefWidth="690.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
    <children>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="284.0" style="-fx-background-color: lightgrey;">
          <children>
@@ -85,9 +85,9 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <ToggleButton layoutX="602.0" layoutY="11.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="49.0" style="-fx-background-color: transparent;">
+                  <ToggleButton fx:id="ToggleStatus" layoutX="602.0" layoutY="11.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="49.0" style="-fx-background-color: transparent;">
                      <graphic>
-                        <ImageView fx:id="ToggleStatus" fitHeight="30.0" fitWidth="30.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="30.0" fitWidth="30.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@Icons/icons8-datenbank-50.png" />
                            </image>
