--- a/Dashboard/src/AddViewElement.fxml
+++ b/Dashboard/src/AddViewElement.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.SubScene?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="AddReport" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="700.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AddViewElementController">
@@ -24,25 +23,22 @@
       <ListView fx:id="Y_Achse" layoutX="37.0" layoutY="480.0" prefHeight="132.0" prefWidth="117.0" />
       <TextField fx:id="NameY" layoutX="164.0" layoutY="480.0" prefHeight="25.0" prefWidth="150.0" promptText="Name der Y-Achse" />
       <TextField fx:id="MaßeinheitY" layoutX="164.0" layoutY="518.0" prefHeight="25.0" prefWidth="151.0" promptText="Maßeinheit" />
-      <Button layoutX="225.0" layoutY="580.0" mnemonicParsing="false" onMouseClicked="#genChart" prefHeight="31.0" prefWidth="89.0" text="Vorschau" />
+      <Button fx:id="previewButton" layoutX="225.0" layoutY="580.0" mnemonicParsing="false" onMouseClicked="#genChart" prefHeight="31.0" prefWidth="89.0" text="Vorschau" />
       <Button layoutX="463.0" layoutY="580.0" mnemonicParsing="false" onMouseClicked="#cancel" prefHeight="31.0" prefWidth="98.0" text="Abbrechen" />
       <Button fx:id="saveButton" layoutX="574.0" layoutY="580.0" mnemonicParsing="false" onMouseClicked="#addViewElement" prefHeight="31.0" prefWidth="97.0" text="Hinzufügen" />
-      <BarChart layoutX="313.0" layoutY="300.0" prefHeight="287.0" prefWidth="370.0">
-         <xAxis>
-            <CategoryAxis side="BOTTOM" />
-         </xAxis>
-         <yAxis>
-            <NumberAxis side="LEFT" />
-         </yAxis>
-      </BarChart>
       <Label layoutX="38.0" layoutY="454.0" text="Y-Achse" />
       <Label layoutX="38.0" layoutY="283.0" text="X-Achse" />
       <Label layoutX="38.0" layoutY="251.0" text="Diagrammtyp :" />
-      <Label layoutX="454.0" layoutY="70.0" prefHeight="21.0" prefWidth="117.0" text="Aktualisierungsrate:" />
+      <Label layoutX="352.0" layoutY="70.0" prefHeight="21.0" prefWidth="219.0" text="Aktualisierungsrate in Sekunden:" />
       <Label layoutX="26.0" layoutY="24.0" prefHeight="27.0" prefWidth="219.0" text="Anzeige-Element anlegen">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
+      <SubScene fx:id="chartArea" height="322.0" layoutX="327.0" layoutY="249.0" width="348.0">
+        <root>
+          <Region />
+        </root>
+      </SubScene>
    </children>
 </AnchorPane>
