--- a/Dashboard/src/Main.fxml
+++ b/Dashboard/src/Main.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="MainView" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
+<AnchorPane id="AnchorPane" fx:id="MainView" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
    <children>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="285.0" style="-fx-background-color: lightgrey;">
          <children>
@@ -30,7 +30,7 @@
                      </font>
                   </Label>
                </children></Pane>
-            <ListView fx:id="ListViewReports" prefHeight="507.0" prefWidth="285.0" style="-fx-background-color: lightgrey;" />
+            <ListView fx:id="ListViewReports" onMouseClicked="#loadReport" prefHeight="507.0" prefWidth="285.0" style="-fx-background-color: lightgrey;" />
             <HBox prefHeight="26.0" prefWidth="290.0">
                <children>
                   <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onMouseClicked="#deleteReport" prefHeight="32.0" prefWidth="50.0" style="-fx-background-color: transparent;">
@@ -85,8 +85,8 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <ToggleButton fx:id="ToggleStatus" layoutX="602.0" layoutY="11.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="49.0" style="-fx-background-color: transparent;" />
-                  <Button layoutX="651.0" layoutY="17.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onMouseClicked="#databaseConnect" prefHeight="31.0" prefWidth="0.0" style="-fx-background-color: transparent;" />
+                  <ToggleButton fx:id="ToggleStatus" layoutX="779.0" layoutY="16.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="49.0" style="-fx-background-color: transparent;" />
+                  <Button layoutX="857.0" layoutY="22.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#databaseConnect" onMouseClicked="#databaseConnect" prefHeight="32.0" prefWidth="30.0" style="-fx-background-color: transparent;" />
                   <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="857.0" layoutY="22.0" opacity="0.3" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@Icons/icons8-einstellungen-filled-50.png" />
