--- a/Dashboard/src/DatabaseView.fxml
+++ b/Dashboard/src/DatabaseView.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -8,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="DatabaseView" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="731.0" prefWidth="915.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DatabaseViewController">
+<AnchorPane fx:id="DatabaseView" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="731.0" prefWidth="915.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DatabaseViewController">
 
    <children>
 
@@ -30,7 +35,7 @@
                </VBox.margin>
             </TextField>
       
-            <TextField fx:id="jdbcPort" prefHeight="25.0" prefWidth="223.0" promptText="80">
+            <TextField fx:id="jdbcDriver" prefHeight="25.0" prefWidth="223.0" promptText="80">
                <VBox.margin>
                   <Insets bottom="40.0" />
                </VBox.margin>
