--- a/Dashboard/src/Report.fxml
+++ b/Dashboard/src/Report.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -63,6 +64,9 @@
                         </ImageView>
 
                      </graphic>
+                     <tooltip>
+                        <Tooltip text="Anzeigeelement entfernen" />
+                     </tooltip>
 
                   </Button>
 
@@ -87,6 +91,9 @@
                         <Insets right="50.0" />
 
                      </HBox.margin>
+                     <tooltip>
+                        <Tooltip text="Anzeigeelement erstellen" />
+                     </tooltip>
 
                   </Button>
 
@@ -108,6 +115,9 @@
                      <HBox.margin>
                         <Insets left="120.0" />
                      </HBox.margin>
+                     <tooltip>
+                        <Tooltip text="Anzeigeelement bearbeiten" />
+                     </tooltip>
 
                   </Button>
 
