--- a/Dashboard/src/DatabaseView.fxml
+++ b/Dashboard/src/DatabaseView.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="DatabaseView" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="731.0" prefWidth="915.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DatabaseViewController">
+<AnchorPane fx:id="DatabaseView" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="731.0" prefWidth="915.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DatabaseViewController">
 
    <children>
 
@@ -97,7 +92,7 @@
 
       <Button layoutX="191.0" layoutY="382.0" mnemonicParsing="false" onMouseClicked="#testConnection" prefHeight="25.0" prefWidth="90.0" text="Test" />
 
-      <Button layoutX="191.0" layoutY="439.0" mnemonicParsing="false" onMouseClicked="#setConnection" prefHeight="25.0" prefWidth="90.0" text="Speichern" />
+      <Button fx:id="saveDBCon" layoutX="191.0" layoutY="439.0" mnemonicParsing="false" onMouseClicked="#setConnection" prefHeight="25.0" prefWidth="90.0" text="Speichern" />
 
    </children>
 
