--- a/Dashboard/src/Main.fxml
+++ b/Dashboard/src/Main.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -14,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="MainView" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
+<AnchorPane id="AnchorPane" fx:id="MainView" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #EEE9E9;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
    <children>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="285.0" style="-fx-background-color: lightgrey;">
          <children>
@@ -95,7 +94,6 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <ToggleButton fx:id="ToggleStatus" layoutX="779.0" layoutY="16.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="49.0" style="-fx-background-color: transparent;" />
                   <Button layoutX="857.0" layoutY="22.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#databaseConnect" onMouseClicked="#databaseConnect" prefHeight="32.0" prefWidth="30.0" style="-fx-background-color: transparent;">
                      <tooltip>
                         <Tooltip text="Datenbank konfigurieren" />
@@ -107,7 +105,7 @@
                            </image>
                         </ImageView>
                      </graphic></Button>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="788.0" layoutY="22.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="ToggleStatus" fitHeight="30.0" fitWidth="30.0" layoutX="808.0" layoutY="23.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@Icons/icons8-datenbank-50.png" />
                      </image>
